--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,13 @@
 } */
 .container {
     max-width: none;
-    padding: 0
+    padding: 0;
 }
 .row {
     margin: 0;
+}
+.col {
+    padding-top: 15px;
 }
 .list-group {
     width: 100%;
@@ -15,4 +18,14 @@
 }
 .list-group-item {
     cursor: pointer;
+}
+.capitalize {
+    text-transform: capitalize;
+}
+h1 {
+    display: inline-block;
+    padding: 5px;
+}
+p {
+    padding-left: 5px;
 }
